--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "conventional-changelog-cli": "^5.0.0",
     "core-js": "^3.42.0",
     "echarts": "^5.6.0",
+    "electron": "^37.1.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.0",
     "lodash": "^4.17.21",
