chore: NAPI-RS 3.0 stable

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,8 +16,8 @@ cssparser-color = "0.3"
 infer           = "0.19"
 libavif         = { version = "0.14", default-features = false, features = ["codec-aom"] }
 libavif-sys     = { version = "0.17", default-features = false, features = ["codec-aom"] }
-napi            = { version = "3.0.0-beta.11", default-features = false, features = ["napi4", "web_stream", "serde-json"] }
-napi-derive     = { version = "3.0.0-beta.11", default-features = false }
+napi            = { version = "3.0.0", default-features = false, features = ["napi4", "web_stream", "serde-json"] }
+napi-derive     = { version = "3.0.0", default-features = false }
 nom             = "8"
 num_cpus        = "1"
 regex           = "1"
