--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     "@jimp/custom": "^0.22.12",
     "@jimp/jpeg": "^0.22.12",
     "@jimp/png": "^0.22.12",
-    "@napi-rs/cli": "^3.0.0-alpha.91",
+    "@napi-rs/cli": "^3.0.0",
     "@octokit/rest": "^22.0.0",
     "@swc-node/register": "^1.10.10",
     "@swc/core": "^1.11.31",
