--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
       "x86_64-unknown-linux-gnu",
       "x86_64-apple-darwin",
       "x86_64-pc-windows-msvc",
+      "aarch64-pc-windows-msvc",
       "armv7-unknown-linux-gnueabihf",
       "x86_64-unknown-linux-musl",
       "aarch64-unknown-linux-gnu",
