--- a/.github/workflows/skia.yaml
+++ b/.github/workflows/skia.yaml
@@ -55,17 +55,8 @@ jobs:
         if: matrix.os == 'windows-latest'
         run: |
           choco install llvm ninja -y
-          choco upgrade llvm --version "19.1.7"
           pip install certifi
 
-      - name: Apply workaround for https://github.com/llvm/llvm-project/issues/95133
-        if: runner.os == 'Windows'
-        shell: cmd
-        run: |
-          perl -i -ne "print unless /unsigned __int32 xbegin\(void\);/" "C:\Program Files\LLVM\lib\clang\19\include\intrin.h"
-          perl -i -ne "print unless /void _xend\(void\);/" "C:\Program Files\LLVM\lib\clang\19\include\intrin.h"
-          findstr /C:"unsigned __int32 xbegin(void);" "C:\Program Files\LLVM\lib\clang\19\include\intrin.h" || exit /b 0
-          findstr /C:"void _xend(void);" "C:\Program Files\LLVM\lib\clang\19\include\intrin.h" || exit /b 0
       # See https://github.com/ilammy/msvc-dev-cmd?tab=readme-ov-file#caveats
       - name: Remove GNU link.exe from GH actions
         if: runner.os == 'Windows'
@@ -293,7 +284,7 @@ jobs:
     name: stable - armv7-linux - build skia
     runs-on: ubuntu-latest
     container:
-      image: debian:buster
+      image: debian:bullseye
 
     steps:
       - name: Setup tools
