--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -177,7 +177,7 @@ jobs:
 
       - name: Setup nasm
         uses: ilammy/setup-nasm@v1
-        if: matrix.settings.host == 'windows-latest'
+        if: ${{ matrix.settings.host == 'windows-latest' || matrix.settings.target == 'x86_64-unknown-linux-musl' }}
 
       - name: Install
         uses: ./.github/actions/setup-rust
