--- a/.github/workflows/skia.yaml
+++ b/.github/workflows/skia.yaml
@@ -55,17 +55,8 @@ jobs:
         if: matrix.os == 'windows-latest'
         run: |
           choco install llvm ninja -y
-          choco upgrade llvm --version "19.1.7"
           pip install certifi
 
-      - name: Apply workaround for https://github.com/llvm/llvm-project/issues/95133
-        if: runner.os == 'Windows'
-        shell: cmd
-        run: |
-          perl -i -ne "print unless /unsigned __int32 xbegin\(void\);/" "C:\Program Files\LLVM\lib\clang\19\include\intrin.h"
-          perl -i -ne "print unless /void _xend\(void\);/" "C:\Program Files\LLVM\lib\clang\19\include\intrin.h"
-          findstr /C:"unsigned __int32 xbegin(void);" "C:\Program Files\LLVM\lib\clang\19\include\intrin.h" || exit /b 0
-          findstr /C:"void _xend(void);" "C:\Program Files\LLVM\lib\clang\19\include\intrin.h" || exit /b 0
       # See https://github.com/ilammy/msvc-dev-cmd?tab=readme-ov-file#caveats
       - name: Remove GNU link.exe from GH actions
         if: runner.os == 'Windows'
@@ -177,20 +168,18 @@ jobs:
           node-version: 22
           cache: 'yarn'
 
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v3
+      - uses: mlugg/setup-zig@v2
         with:
-          registry: ghcr.io
-          username: ${{ secrets.GH_CONTAINER_UNAME }}
-          password: ${{ secrets.GH_TOKEN }}
+          version: 0.15.1
+      - name: Install cargo-zigbuild
+        uses: taiki-e/install-action@v2
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
+        with:
+          tool: cargo-zigbuild
 
       - name: Compile skia
-        run: |
-          docker pull ghcr.io/brooooooklyn/canvas/musl-builder:lts
-          docker tag ghcr.io/brooooooklyn/canvas/musl-builder:lts builder
-          docker run --rm -v $(pwd):/canvas -w /canvas builder sh -c "apk add libc++-dev libc++-static && rm /usr/lib/libc++.so /usr/lib/libc++.so.1 /usr/lib/libc++.so.1.0 /usr/lib/libc++abi.so /usr/lib/libc++abi.so.1 /usr/lib/libc++abi.so.1.0 && node ./scripts/build-skia.js"
-        env:
-          PYTHONHTTPSVERIFY: 0
+        run: node ./scripts/build-skia.js --target=x86_64-unknown-linux-musl
 
       - name: Install dependencies
         run: yarn install --immutable --mode=skip-build
@@ -257,27 +246,18 @@ jobs:
           node-version: 22
           cache: 'yarn'
 
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v3
+      - uses: mlugg/setup-zig@v2
         with:
-          registry: ghcr.io
-          username: ${{ secrets.GH_CONTAINER_UNAME }}
-          password: ${{ secrets.GH_TOKEN }}
-
-      - name: Install libc++-dev-aarch64
-        run: |
-          mkdir -p aarch64-linux-musl-cross/llvm/include
-          mkdir -p aarch64-linux-musl-cross/llvm/lib
-          docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
-          docker run --platform=linux/arm64 --rm -v $(pwd)/aarch64-linux-musl-cross:/aarch64-linux-musl-cross -w /canvas node:18-alpine sh -c "apk add libc++-dev libc++-static && cp -r /usr/include/c++ /aarch64-linux-musl-cross/llvm/include && cp /usr/lib/libc++.a /aarch64-linux-musl-cross/llvm/lib/libc++.a && cp /usr/lib/libc++abi.a /aarch64-linux-musl-cross/llvm/lib/libc++abi.a"
+          version: 0.15.1
+      - name: Install cargo-zigbuild
+        uses: taiki-e/install-action@v2
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
+        with:
+          tool: cargo-zigbuild
 
       - name: Compile skia
-        run: |
-          docker pull ghcr.io/brooooooklyn/canvas/musl-builder:lts
-          docker tag ghcr.io/brooooooklyn/canvas/musl-builder:lts builder
-          docker run --rm -v $(pwd):/canvas -w /canvas builder sh -c "cp -r /canvas/aarch64-linux-musl-cross/llvm/include/c++ /aarch64-linux-musl-cross/include && cp /canvas/aarch64-linux-musl-cross/llvm/lib/* /aarch64-linux-musl-cross/lib && node ./scripts/build-skia.js --target=aarch64-unknown-linux-musl"
-        env:
-          PYTHONHTTPSVERIFY: 0
+        run: node ./scripts/build-skia.js --target=aarch64-unknown-linux-musl
 
       - name: Install dependencies
         run: yarn install --immutable --mode=skip-build
@@ -293,7 +273,7 @@ jobs:
     name: stable - armv7-linux - build skia
     runs-on: ubuntu-latest
     container:
-      image: debian:buster
+      image: debian:bullseye
 
     steps:
       - name: Setup tools
@@ -310,8 +290,21 @@ jobs:
         with:
           node-version: 22
 
+      - name: Sync deps
+        uses: nick-fields/retry@v3
+        with:
+          timeout_minutes: 10
+          max_attempts: 5
+          command: |
+            cd skia
+            python ./tools/git-sync-deps
+        env:
+          PYTHONHTTPSVERIFY: 0
+
       - name: Compile skia
         run: node ./scripts/build-skia.js --target=armv7-unknown-linux-gnueabihf
+        env:
+          SKIP_SYNC_SK_DEPS: 0
 
       - name: Install dependencies
         run: |
