--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -230,6 +230,8 @@ jobs:
             apt-get install -y clang-19
             ln -s /usr/bin/clang-19 /usr/bin/clang
             ln -s /usr/bin/clang++-19 /usr/bin/clang++
+            curl -fsSL https://deb.nodesource.com/setup_22.x | bash -
+            apt-get install -y nodejs
       - uses: actions/checkout@v5
         with:
           submodules: true
