--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -77,7 +77,6 @@ jobs:
         settings:
           - host: macos-latest
             target: 'x86_64-apple-darwin'
-            setup: brew install nasm
             build: |
               rustc --print target-cpus
               clang --version
@@ -144,7 +143,7 @@ jobs:
               export CXX=riscv64-linux-gnu-g++
               yarn build --target riscv64gc-unknown-linux-gnu
 
-    name: stable - ${{ matrix.settings.target }} - node@20
+    name: stable - ${{ matrix.settings.target }} - node@22
     runs-on: ${{ matrix.settings.host }}
 
     steps:
@@ -177,7 +176,7 @@ jobs:
 
       - name: Setup nasm
         uses: ilammy/setup-nasm@v1
-        if: ${{ matrix.settings.host == 'windows-latest' || matrix.settings.target == 'x86_64-unknown-linux-musl' }}
+        if: ${{ matrix.settings.host == 'windows-latest' || matrix.settings.target == 'x86_64-unknown-linux-musl' || matrix.settings.target == 'x86_64-apple-darwin' }}
 
       - name: Install
         uses: ./.github/actions/setup-rust
