--- a/package.json
+++ b/package.json
@@ -77,8 +77,7 @@
     "@jimp/png": "^0.22.12",
     "@napi-rs/cli": "^3.1.1",
     "@octokit/rest": "^22.0.0",
-    "@swc-node/register": "^1.10.10",
-    "@swc/core": "^1.11.31",
+    "@oxc-node/core": "^0.0.32",
     "@taplo/cli": "^0.7.0",
     "@types/lodash": "^4.17.17",
     "@types/node": "^22.15.30",
@@ -115,13 +114,13 @@
     ]
   },
   "ava": {
-    "require": [
-      "@swc-node/register",
-      "core-js/proposals/promise-with-resolvers.js"
+    "nodeArguments": [
+      "--import=@oxc-node/core/register",
+      "--import=core-js/proposals/promise-with-resolvers.js"
     ],
-    "extensions": [
-      "ts"
-    ],
+    "extensions": {
+      "ts": "module"
+    },
     "files": [
       "__test__/**/*.spec.ts",
       "scripts/__test__/**/*.spec.ts"
