--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -5,11 +5,15 @@ on:
     - cron: '0 1 * * *'
   workflow_dispatch:
 
+permissions: {}
+
 jobs:
   build_image:
     name: Build Docker images
     runs-on: ubuntu-latest
-
+    permissions:
+      contents: read
+      packages: write
     steps:
       - uses: actions/checkout@v6
 
@@ -21,7 +25,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ secrets.GH_CONTAINER_UNAME }}
-          password: ${{ secrets.GH_TOKEN }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build docker image
         run: |
