--- a/.github/workflows/skia.yaml
+++ b/.github/workflows/skia.yaml
@@ -10,6 +10,10 @@ on:
 env:
   MACOSX_DEPLOYMENT_TARGET: '10.13'
 
+permissions:
+  contents: write
+  packages: read
+
 jobs:
   build:
     if: "!contains(github.event.head_commit.message, 'skip skia')"
@@ -69,7 +73,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ secrets.GH_CONTAINER_UNAME }}
-          password: ${{ secrets.GH_TOKEN }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Sync deps on host
         run: python ./tools/git-sync-deps
@@ -191,7 +195,6 @@ jobs:
 
   build-aarch64-linux-gnu:
     if: "!contains(github.event.head_commit.message, 'skip skia')"
-
     name: stable - aarch64-linux-gnu - build skia
     runs-on: ubuntu-latest
 
@@ -214,6 +217,13 @@ jobs:
       - name: Sync deps on host
         run: python ./tools/git-sync-deps
         working-directory: skia
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ secrets.GH_CONTAINER_UNAME }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Compile skia
         run: |
