chore: add funding to package.json

--- a/package.json
+++ b/package.json
@@ -140,5 +140,9 @@
     "singleQuote": true,
     "arrowParens": "always"
   },
+  "funding": {
+    "type": "github",
+    "url": "https://github.com/sponsors/Brooooooklyn"
+  },
   "packageManager": "yarn@4.12.0"
 }
