--- a/renovate.json
+++ b/renovate.json
@@ -4,6 +4,11 @@
     {
       "automerge": true,
       "matchUpdateTypes": ["minor", "patch", "pin", "digest"]
+    },
+    {
+      "groupName": "rust toolchain",
+      "matchManagers": ["custom.regex"],
+      "matchDepNames": ["rustc"]
     }
   ],
   "lockFileMaintenance": {
