--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -341,6 +341,8 @@ jobs:
 
       - name: Test bindings
         run: yarn test:ci
+        env:
+          RUN_STRESS_TESTS: 'true'
 
       - name: Test failed
         if: ${{ failure() }}
